--- a/ClientApp/src/app/modules/master/customer/customer-list/customer-list.component.html
+++ b/ClientApp/src/app/modules/master/customer/customer-list/customer-list.component.html
@@ -17,19 +17,19 @@
               <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table row-border hover">
                 <thead>
                   <tr>
-                    <th style="width: 15%;">Client Id</th>
-                    <th style="width: 10%;">Title</th>
+
+                    <th style="width: 15%;">Title</th>
                     <th style="width: 20%;">Customer Name</th>
                     <th style="width: 15%;">Company Name</th>
                     <th style="width: 15%;">Mobile #</th>
                     <th style="width: 15%;">Tel #</th>
-                    <th style="width: 10%;" class="text-center actions-td cursor">Action</th>
+                    <th style="width: 20%;" class="text-center actions-td cursor">Action</th>
                   </tr>
                 </thead>
                 <tbody *ngIf="customers?.length != 0">
                   <tr *ngFor="let customer of customers">
-                      <td data-title="Client Id">{{ customer.clientId }}</td>
-                      <td data-title="Title">{{ customer.clientTitleId==1?"Mr":"Ms" }}</td>
+
+                      <td data-title="Title">{{ customer.clientTitleId=='1'?"Mr":"Ms" }}</td>
                       <td data-title="Client Name">{{ customer.clientName }}</td>
                       <td data-title="Company Name">{{ customer.companyName }}</td>
                       <td data-title="Mobile #">{{ customer.ownerMobileNo }}</td>
