--- a/ClientApp/src/app/modules/users/users-list/users-list.component.html
+++ b/ClientApp/src/app/modules/users/users-list/users-list.component.html
@@ -7,8 +7,8 @@
   <div class="card mb-4">
     <div class="card-header">
       <h4 class="float-left">Users</h4>
-    
-      <button class="btn  btn-primary float-right" (click)="openUserPopup(contentUserPopup,0)">Add User</button>
+
+      <button class="btn  btn-primary float-right" (click)="openUserPopup(0)">Add User</button>
     </div>
     <div class="card-body">
       <!--table listing statrt hover-->
@@ -19,18 +19,18 @@
             <tr>
               <th scope="col" style="width:15%" class="cursor">
                 <div class="d-flex align-items-center">
-                  <span>First Name</span> 
+                  <span>First Name</span>
                 </div>
               </th>
               <th scope="col" style="width:15%" class="cursor">
                 <div class="d-flex align-items-center">
-                  <span>Last Name</span> 
+                  <span>Last Name</span>
                 </div>
               </th>
 
               <th scope="col" style="width:25%" class="cursor">
                 <div class="d-flex align-items-center">
-                  <span> Email</span> 
+                  <span> Email</span>
                 </div>
               </th>
               <th scope="col" style="width:15%">
@@ -49,17 +49,15 @@
               <td data-title="First Name">{{user.firstName}}</td>
               <td data-title="Last Name">{{user.lastName}}</td>
               <td data-title="Email">{{user.userEmail}}</td>
-              <td data-title="Role" *ngIf="user.userRole==1">Super Admin</td>
-              <td data-title="Role" *ngIf="user.userRole==2">Staff</td>
-              <td data-title="Role" *ngIf="user.userRole>2">Other</td>
+              <td data-title="Role" >{{ getuserRoleName(user.userRole)}}</td>
               <td data-title="Actions" class="action text-center actions-td">
                 <div class="d-flex justify-content-center">
                   <a href="javascript:void(0)">
                     <i class="far fa-edit orange" placement="top"
-                       ngbTooltip="View/Edit" (click)="openUserPopup(contentUserPopup, user.userId)"></i>
+                       ngbTooltip="View/Edit" (click)="openUserPopup(user.userId)"></i>
                   </a>
                   <a href="javascript:void(0)">
-                    <i class="far fa-trash-alt orange" placement="top" ngbTooltip="Delete" (click)="open(content,user.userId)"></i>
+                    <i class="far fa-trash-alt orange" placement="top" ngbTooltip="Delete" (click)="openDelete(content,user.userId)"></i>
                   </a>
                 </div>
               </td>
@@ -73,131 +71,6 @@
   </div>
 </div>
 
-<!-- Ng modal window -->
-<ng-template #contentUserPopup let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title" ngbAutofocus> Add User</h4>
-  </div>
-  <div class="modal-body">
-    <form [formGroup]="userForm" novalidate>
-      <!--<input type="hidden" [(ngModel)] ="user.userId"/>-->
-      <div class="row">
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="form-group has-float-label">
-            <input class="form-control" [(ngModel)]="user.firstName" id="firstName" type="text" placeholder="First Name"
-                   formControlName="firstName" />
-            <label for="firstName">First Name</label>
-            <div *ngIf="userForm.controls['firstName'].invalid && (userForm.controls['firstName'].dirty || userForm.controls['firstName'].touched)"
-                 class="error-msg">
-              <div *ngIf="userForm.controls['firstName'].errors.required">
-                First name is required.
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="form-group has-float-label">
-            <input class="form-control" [(ngModel)]="user.middleName" id="middleName" type="text" placeholder="Middle Name"
-                   formControlName="middleName" />
-            <label for="middleName">Middle Name</label>
-            <div *ngIf="userForm.controls['middleName'].invalid && (userForm.controls['middleName'].dirty || userForm.controls['middleName'].touched)"
-                 class="error-msg">
-              <div *ngIf="userForm.controls['middleName'].errors.required">
-                Middle name is required.
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="form-group has-float-label">
-            <input class="form-control" id="lastName" [(ngModel)]="user.lastName" type="text" placeholder="Last Name"
-                   formControlName="lastName" />
-            <label for="lastName">Last Name</label>
-            <div *ngIf="userForm.controls['lastName'].invalid && (userForm.controls['lastName'].dirty || userForm.controls['lastName'].touched)"
-                 class="error-msg">
-              <div *ngIf="userForm.controls['lastName'].errors.required">
-                Last name is required.
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="row">
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="form-group">
-            <span class="plain-select">
-              <select formControlName="userRole" [(ngModel)]="user.userRole" class="form-control" id="userRole">
-                <option value="">Select Role</option>
-                <option value="1">Super Admin</option>
-                <option value="2">Staff</option>
-              </select>
-              <label for="userRole" class="select-label">Select Role</label>
-            </span>
-            <div *ngIf="userForm.controls['userRole'].invalid && (userForm.controls['userRole'].dirty || userForm.controls['userRole'].touched)"
-                 class="error-msg">
-              <div *ngIf="userForm.controls['userRole'].errors.required">
-                User role is required.
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="form-group has-float-label">
-            <input class="form-control" [(ngModel)]="user.userEmail" id="userEmail" type="text" placeholder="User Email"
-                   formControlName="userEmail" />
-            <label for="userEmail">User Email</label>
-            <div *ngIf="userForm.controls['userEmail'].invalid && (userForm.controls['userEmail'].dirty || userForm.controls['userEmail'].touched)"
-                 class="error-msg">
-              <div *ngIf="userForm.controls['userEmail'].errors.required">
-                User email is required.
-              </div>
-              <div *ngIf="userForm.controls['userEmail'].errors.email || userForm.controls['userEmail'].errors.pattern">
-                User email must be a valid email address.
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="form-group has-float-label">
-            <input class="form-control" [(ngModel)]="user.userPassword" id="userPassword" type="text" placeholder="User Password"
-                   formControlName="userPassword" />
-            <label for="userPassword">User Password</label>
-            <div *ngIf="userForm.controls['userPassword'].invalid && (userForm.controls['userPassword'].dirty || userForm.controls['userPassword'].touched)"
-                 class="error-msg">
-              <div *ngIf="userForm.controls['userPassword'].errors.required">
-                User password is required.
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row access-rights-checkbox">
-        <div class="col-12">
-          <h5 class="mb-3"> Access Rights</h5>
-          <div class="form-group d-flex flex-wrap">
-            <input type="hidden" name="permissions" formControlName="permissions" [(ngModel)]="modulePermission">
-            <div *ngFor="let role of modulePermission" class="checkbox">
-              <input type="checkbox"
-                     [value]="role.isChecked"
-                     [checked]="role.isChecked"
-                     (change)="$event.target.checked ? role.isChecked = true : role.isChecked = false">
-              {{role.moduleName}}
-              <br />
-            </div>
-          </div>
-        </div>
-      </div>
-    </form>
-  </div>
-  <div class="modal-footer">
-    <button class="btn btn-primary" (click)="saveData()">Save</button>
-    <button class="btn btn-secondary" (click)="modal.close('Save click')">Cancel</button>
-  </div>
-</ng-template>
-
 
 <ng-template #content let-modal>
   <div class="modal-header">
@@ -207,7 +80,7 @@
     <p class="text-center">Are you sure, you want to delete?</p>
   </div>
   <div class="modal-footer no-top-border">
-    <button class="btn btn-primary" (click)="changeSuccessMessage(); modal.close('Save click')">OK</button>
-    <button class="btn btn-secondary" (click)="modal.close('Save click')">Cancel</button>
+    <button class="btn btn-primary" (click)="modal.close(true)">OK</button>
+    <button class="btn btn-secondary" (click)="modal.close(false)">Cancel</button>
   </div>
 </ng-template>
