--- a/ClientApp/src/assets/scss/components/_modal.scss
+++ b/ClientApp/src/assets/scss/components/_modal.scss
@@ -45,7 +45,7 @@
             margin-right: 0.3125rem;
         }
         .modal-title {
-            font-size: 18px;
+            font-size: 1rem;
             color: $black-blue;
         }
     }
@@ -75,7 +75,7 @@
                 padding: 0.7rem 1rem;
     border-bottom: 1px solid #f2f3f8;
     h4 {
-        font-size: 18px;
+        font-size: 1rem;
         color: $black-blue;
     }
             }
