--- a/ClientApp/src/app/modules/inward-material/material-type/material-type.component.html
+++ b/ClientApp/src/app/modules/inward-material/material-type/material-type.component.html
@@ -1,60 +1,29 @@
-
-
 <div class="container-fluid">
     <!--success message-->
 <ngb-alert *ngIf="successMessage" type="success" (close)="successMessage = null">{{ successMessage }}</ngb-alert>
 <!--success message-->
-    
-  
     <div class="card mb-4">
         <div class="card-header">
-            <h4 class="float-left">Material Type</h4> 
-            <button class="btn btn-search btn-primary float-right d-sm-none"
-                (click)="toggleSearch()"><i class="icon-search"></i></button>
-                <button class="btn  btn-primary float-right" (click)="addClientPopup(clientPopup)">Add Material Type</button>
+            <h4 class="float-left">Model No / Material Type / Company Name</h4> 
+                <button class="btn  btn-primary float-right" (click)="addSearchModelNoMaterialTypePopup(0)">Add Material Type</button>
         </div>
         <div class="card-body">
-            <!--table search filter start-->
-            <form class="search-filter d-none d-md-block" [ngClass]="searchFilter ? 'd-block' : 'd-none'">
-                <div class="row  mb-2">
-                    <div class="col-12 col-sm-3">
-                        <div class="form-group">
-                            <span class="plain-select">
-                                <select class="form-control" id="select1">
-                                    <option value="" selected>Select</option>
-                                    <option>Monitor</option>
-                                    <option>Mouse</option>
-                                    <option>Hard Disk</option>
-                                    <option>Motherboard</option>
-                                </select>
-                                <label class="select-label">Material Type</label>
-                            </span>
-                        </div>
-                    </div>
-                    <!-- <div class="col-12 col-sm-3">
-                        <div class="form-group has-float-label">
-                            <input class="form-control" type="text" id="companyName" placeholder="Company Name">
-                            <label for="companyName">Company Name</label>
-                        </div>
-                    </div> -->
-                    
-                    <div class="col-12 col-sm-3 text-right">
-                        <div class="form-group mt-2">
-                            <button type="submit" class="btn btn-outline btn-outline-dark">Reset</button>
-                            <button type="submit" class="btn btn-outline btn-outline-primary">Search</button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-            <!--table search filter end-->
             <!--table listing statrt hover-->
             <div id="no-more-tables">
                 <!-- This id used for responsive table -->
-                <table class="table table-hover">
+                <table class="table row-border hover" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                     <thead>
                         <tr>
                             <th scope="col" style="width:88%" class="cursor">
+                                <div class="d-flex align-items-center"><span>Model No</span> <span>
+                                        &#9660;</span></div>
+                            </th>
+                            <th scope="col" style="width:88%" class="cursor">
                                 <div class="d-flex align-items-center"><span>Material Type</span> <span>
+                                        &#9660;</span></div>
+                            </th>
+                            <th scope="col" style="width:88%" class="cursor">
+                                <div class="d-flex align-items-center"><span>Company Name</span> <span>
                                         &#9660;</span></div>
                             </th>
                             <th scope="col" style="width:12%" class="text-center actions-td cursor">
@@ -64,125 +33,26 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td data-title="Material Type">15" LCD Monitor</td>
+                        <tr *ngFor="let material of searchModelNoMaterialTypeCompanyNameServiceList">
+                            <td data-title="Model No">{{material.modelNo}}</td>
+                            <td data-title="Material Type">{{material.materialType}}</td>
+                            <td data-title="Company Name">{{material.companyName}}</td>
                             <td data-title="Actions" class="action text-center actions-td">
                                 <div class="d-flex justify-content-center">
                                     <a href="javascript:void(0)"> <i class="far fa-edit orange" placement="top"
-                                            ngbTooltip="View/Edit" (click)="addClientPopup(clientPopup)"></i></a>
+                                            ngbTooltip="View/Edit" (click)="addSearchModelNoMaterialTypePopup(material.searchId)"></i></a>
                                     <a href="javascript:void(0)">
-                                        <i class="far fa-trash-alt orange" placement="top" ngbTooltip="Delete" (click)="open(content)"></i></a>
+                                        <i class="far fa-trash-alt orange" placement="top" ngbTooltip="Delete" (click)="openDelete(content,material.searchId)"></i></a>
                                 </div>
                             </td>
                         </tr>
-                        <tr>
-                            <td data-title="Material Type">Intex Motherboard</td>
-                            <td data-title="Actions" class="action text-center actions-td">
-                                <div class="d-flex justify-content-center">
-                                    <a href="javascript:void(0)"> <i class="far fa-edit orange" placement="top"
-                                            ngbTooltip="View/Edit" (click)="addClientPopup(clientPopup)"></i></a>
-                                    <a href="javascript:void(0)">
-                                        <i class="far fa-trash-alt orange" placement="top" ngbTooltip="Delete" (click)="open(content)"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td data-title="Material Type">Hard Disk</td>
-                            <td data-title="Actions" class="action text-center actions-td">
-                                <div class="d-flex justify-content-center">
-                                    <a href="javascript:void(0)"> <i class="far fa-edit orange" placement="top"
-                                            ngbTooltip="View/Edit" (click)="addClientPopup(clientPopup)"></i></a>
-                                    <a href="javascript:void(0)">
-                                        <i class="far fa-trash-alt orange" placement="top" ngbTooltip="Delete" (click)="open(content)"></i></a>
-                                </div>
-                            </td>
-                        </tr>
-                       
                     </tbody>
                 </table>
-                <div class="d-flex justify-content-between align-items-center table-pagination">
-                    <div class="d-flex align-items-center">
-                        Show <span class="plain-select">
-                            <select class="form-control ml-2 mr-2" id="select3">
-                                <option>10</option>
-                                <option>20</option>
-                                <option>25</option>
-                            </select>
-                        </span>
-                        Entries
-                    </div>
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination justify-content-end">
-                            <li class="page-item disabled">
-                                <a class="page-link" href="javascript:void(0)" tabindex="-1"><i
-                                        class="icon-left"></i></a>
-                            </li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">1</a></li>
-                            <li class="page-item active"><a class="page-link" href="javascript:void(0)">2</a></li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-                            <li class="page-item"><a class="page-link" href="javascript:void(0)">4</a></li>
-                            <li class="page-item">
-                                <a class="page-link" href="javascript:void(0)"><i class="icon-right"></i></a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
                 <!--table listing end-->
             </div>
         </div>
     </div>
 </div>
-
-<!-- Ng modal window -->
-<ng-template #clientPopup let-modal>
-    <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title" ngbAutofocus> Add Material Type</h4>
-    </div>
-    <div class="modal-body">
-        <form [formGroup]="addMaterialTypeForm" novalidate>
-       <div class="row">
-        <!-- <div class="col-12 col-md-6 col-lg-4">
-            <div class="form-group">
-                <span class="plain-select">
-                    <select class="form-control" id="select3" formControlName="title">
-                        <option value="" selected>Select</option>
-                        <option>Mr</option>
-                        <option>Mrs</option>
-                        <option>Miss</option>
-                    </select>
-                    <label class="select-label">Title</label>
-                </span>
-                <div *ngIf="addMaterialTypeForm.controls['title'].invalid && (addMaterialTypeForm.controls['title'].dirty || addMaterialTypeForm.controls['title'].touched)"
-                class="error-msg">
-                <div *ngIf="addMaterialTypeForm.controls['title'].errors.required">
-                   Title is required.
-                </div>
-            </div>
-            </div>
-        </div> -->
-        <div class="col-12 col-md-6 col-lg-4">
-            <div class="form-group has-float-label">
-                <input class="form-control" id="materialType" type="text" placeholder="Material Type"
-                    formControlName="materialType" />
-                <label for="materialType">Material Type</label>
-                <div *ngIf="addMaterialTypeForm.controls['materialType'].invalid && (addMaterialTypeForm.controls['materialType'].dirty || addMaterialTypeForm.controls['materialType'].touched)"
-                    class="error-msg">
-                    <div *ngIf="addMaterialTypeForm.controls['materialType'].errors.required">
-                        Material type is required.
-                    </div>
-                </div>
-            </div>
-        </div>
-       
-       </div>
-        </form>
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-secondary" (click)="modal.close('Save click')">Cancel</button>
-        <button class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
-    </div>
-</ng-template>
-
 
 <ng-template #content let-modal>
     <div class="modal-header">
@@ -192,8 +62,8 @@
         <p class="text-center">Are you sure, you want to delete?</p>
     </div>
     <div class="modal-footer no-top-border">
-        <button class="btn btn-primary" (click)="changeSuccessMessage(); modal.close('Save click')">OK</button>
-        <button class="btn btn-secondary" (click)="modal.close('Save click')">Cancel</button>
+        <button class="btn btn-primary" (click)="modal.close(true)">OK</button>
+        <button class="btn btn-secondary" (click)="modal.close(false)">Cancel</button>
     </div>
 </ng-template>
 
